tests/ui/variant-nullary-not-matched.stderr
error: `Variant2` doesn't match pattern `tuple(_)`
 --> tests/ui/variant-nullary-not-matched.rs:7:5
  |
7 |     Variant2
  |     ^^^^^^^^
